--- a/source/index.html
+++ b/source/index.html
@@ -160,25 +160,38 @@
     </main>
 
     <footer class="main-footer">
-      <p class="main-footer__title">#visitSedona</p>
+      <p class="main-footer__title title">#visitSedona</p>
       <ul class="main-footer__social-list social-list">
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--vk" href="https://vk.com/htmlacademy"
-            aria-label="Мы в ВКонтакте."></a>
+          <a class="social-list__link" href="https://vk.com/htmlacademy"
+            aria-label="Мы в ВКонтакте.">
+            <svg class="social-list__icon" width="24" height="24" role="img">
+              <use xlink:href="img/sprite.svg#icon-vk"></use>
+            </svg>
+            </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--telegram" href="https://t.me/htmlacademy"
-            aria-label="Мы в Телеграмм."></a>
+          <a class="social-list__link" href="https://t.me/htmlacademy"
+            aria-label="Мы в Телеграмм.">
+            <svg class="social-list__icon" width="24" height="24" role="img">
+              <use xlink:href="img/sprite.svg#icon-telegram"></use>
+            </svg></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--youtube" href="https://www.youtube.com/user/htmlacademyru"
-            aria-label="Мы в Ютуб."></a>
+          <a class="social-list__link" href="https://www.youtube.com/user/htmlacademyru"
+            aria-label="Мы в Ютуб.">
+            <svg class="social-list__icon" width="24" height="24" role="img">
+              <use xlink:href="img/sprite.svg#icon-youtube.svg"></use>
+            </svg></a>
         </li>
       </ul>
 
       <div class="main-footer__copyright copyright">
-        <span class="copyright__text">Разработано</span>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy."></a>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy.">Разработано
+          <svg class="copyright__icon" width="48" height="36" role="img">
+            <use xlink:href="img/sprite.svg#htmlacademy.svg"></use>
+          </svg>
+        </a>
       </div>
     </footer>
   </div>
